cmake_minimum_required(VERSION 2.8)
set(appName "argTest")
set(myAppName ${appName} )
string(APPEND myAppName ".cpp")
project( ${appName} )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ${appName} ${myAppName} )
target_link_libraries( ${appName} ${OpenCV_LIBS} )